# ai-study-crew

./: .gitignore  README.md  pyproject.toml
examples/historia-de-chile/: settings.yml
src/study/: crew.py  main.py
src/study/config/: agents.yaml  tasks.yaml
src/study/tools/: chromadb.py
src/utils/: embedding.py
src/workflow/: agents.py  main.py  state.py
