[tool.poetry]
name = "study"
version = "0.1.0"
description = "study using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.30.11" }
pyyaml = "^6.0.1"
langgraph = "<0.0.67"
chromadb = ">=0.4.22,<0.5.0"

[tool.poetry.scripts]
start = "workflow.main:run"
study = "study.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
